--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -43,7 +43,7 @@ bindsym $mod+l exec "i3lock -c 000000 -i /usr/share/endeavouros/backgrounds/ende
 bindsym $mod+q kill
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+Return exec --no-startup-id "rofi -show drun"
-bindsym $mod+Shift+q exec --no-startup-id rofi-power
+bindsym $mod+Shift+q exec --no-startup-id ~/.config/i3/scripts/rofi-power
 
 # Window manipulation
 bindsym $mod+Left focus left
@@ -121,8 +121,8 @@ bindsym $mod+Ctrl+b workspace $ws2; exec brave
 bindsym $mod+Ctrl+e workspace $ws3; exec pcmanfm
 bindsym Ctrl+Shift+Escape exec "kitty --app-id btop btop"
 bindsym $mod+Escape exec "kitty --app-id btop btop"
-bindsym $mod+period exec --no-startup-id rofi-config
-bindsym $mod+m exec --no-startup-id rofi-mount
+bindsym $mod+period exec --no-startup-id ~/.config/i3/scripts/rofi-config
+bindsym $mod+m exec --no-startup-id ~/.config/i3/scripts/rofi-mount
 bindsym Print exec --no-startup-id maim | tee ~/Pictures/screen_$(date +%F_%H-%M-%S).png | xclip -selection clipboard -t image/png && notify-send "Screenshot saved"
 bindsym Shift+Print exec --no-startup-id maim -s -b 3 | tee ~/Pictures/screen_$(date +%F_%H-%M-%S).png | xclip -selection clipboard -t image/png && notify-send "Screenshot saved"
 
