--- a/sway/.config/fuzzel/fuzzel.ini
+++ b/sway/.config/fuzzel/fuzzel.ini
@@ -1,5 +1,5 @@
 include=~/.config/fuzzel/catppuccin-mocha/lavender.ini
-font=JetBrainsMono Nerd Font
+font=JetBrainsMono Nerd Font:size=13
 dpi-aware=no
 use-bold=yes
 icon-theme=Papirus-Dark
