--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -9,6 +9,7 @@ prepend_keymap = [
 
 	# Goto
 	{ on = [ "g", "m" ],       run = "cd /media/NAS/Media", desc = "Go to the NAS mount" },
+	{ on = [ "g", "u" ],       run = "cd /run/media/$USER", desc = "Go to USB mounts" },
 	{ on = [ "g", "." ],       run = "cd ~/.dotfiles/", desc = "Go to dotfiles" },
 ]
 
