--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -10,13 +10,13 @@ Alt+ENTER cycle fullscreen          #fullscreen/un-fullscreen (with double left 
 MBTN_LEFT_DBL cycle fullscreen      #fullscreen/un-fullscreen
 q quit-watch-later			        #quit and save position
 Alt+x quit                          #quit without saving position
-1 cycle border 		                #Cycle between no titlebar/ "View Minimal in mpc-hc"
-Ctrl+a     cycle ontop              # keep mpv window on top of others
 n show-text ${filename}             # Show filename
 
 #Video
-PGDWN playlist-next; write-watch-later-config  		    #Skip to next file
-PGUP playlist-prev; write-watch-later-config 			#Skip to previous file
+PGUP add chapter -1                   # seek to the previous chapter
+PGDWN add chapter 1                   # seek to the next chapter
+> playlist-next; write-watch-later-config  		    #Skip to next file
+< playlist-prev; write-watch-later-config 			#Skip to previous file
 RIGHT seek  5                                           # seek 5 seconds forward
 LEFT seek -5                                            # seek 5 seconds backward
 HOME seek 0 absolute                                    # go to beginning of video
@@ -33,14 +33,10 @@ WHEEL_DOWN add volume -5            #Decreases the volume by number
 + add audio-delay 0.100             # this changes audio/video sync
 - add audio-delay -0.100
 a cycle audio 						#Next audio track
-Shift+a cycle audio down   		    #Prev audio track
 Ctrl+M cycle mute 					# cycle between mute
 
 #Subs
 s cycle sub         				#cycle forward between subs
-S cycle sub down					#Cycle backwards between subs
-u cycle sub         				#cycle forward between subs
-y cycle sub down					#Cycle backwards between subs
 w cycle sub-visibility          	#cycle sub visilibility 
 F1 add sub-delay -0.1           	# subtract 100 ms delay from subs
 F2 add sub-delay +0.1               # add 100 ms delay from subs
