--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -42,8 +42,8 @@ prepend_rules = [
 	{ name = "*.epub",          use = [ "ebook", "open", "extract", "reveal" ] },
 ]
 
-#[plugin]
-#prepend_fetchers = [
-#	# Mimetype
-#	{ id = "mime", name = "*", run = "mime-ext", if = "!(mime|dummy)", prio = "high" },
-#]
+[plugin]
+prepend_fetchers = [
+	# Mimetype
+	{ id = "mime", name = "*", run = "mime-ext", if = "!(mime|dummy)", prio = "high" },
+]
