--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -22,6 +22,8 @@
         "battery",
         "pulseaudio",
         "sway/language",
+        "network",
+        "bluetooth",
         "tray"
     ],
 
@@ -75,7 +77,7 @@
     
     "sway/language": {
         "format": "  {}",
-        "tooltip": false
+        "tooltip-format": "{long}"
     },
     
     "battery": {
@@ -91,7 +93,29 @@
         "format-alt": "{time} {icon}",
         "format-icons": [" ", " ", " ", " ", " "]
     },
-    
+
+     "network": {
+        "format-wifi": "",
+        "format-ethernet": "󰈀",
+        "format-disconnected": "",
+        "tooltip-format-wifi": "  {essid} ({signalStrength}%)",
+        "tooltip-format-ethernet": "󰈀 {ipaddr}",
+        "tooltip-format-disconnected": "Disconnected",
+        "on-click": "nm-connection-editor",
+        "max-length": 50
+    },
+
+    "bluetooth": {
+        "format": "  ",
+        // "format-disabled": "",
+        "format-connected": " {num_connections}",
+        "tooltip-format": "{controller_alias}\t{controller_address}",
+        "tooltip-format-disabled": "Bluetooth disabled",
+        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+        "on-click": "blueman-manager",
+    },
+
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
         "format": "{icon}  {volume}%",
@@ -122,6 +146,7 @@
     "custom/updates": {
         "format" : "󰇚 {}",
         "interval": 3600,
-		"exec": "checkupdates | wc -l"
+		"exec": "checkupdates | wc -l",
+        "tooltip-format": "{} updates available"
     }
 }
