--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -24,6 +24,7 @@
         "sway/language",
         "network",
         "bluetooth",
+        "power-profiles-daemon",
         "tray"
     ],
 
@@ -114,6 +115,18 @@
         "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
         "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
         "on-click": "blueman-manager",
+    },
+
+    "power-profiles-daemon": {
+      "format": "{icon}",
+      "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+      "tooltip": true,
+      "format-icons": {
+        "default": "",
+        "performance": "",
+        "balanced": "",
+        "power-saver": ""
+        },
     },
 
     "pulseaudio": {
