--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -1,5 +1,5 @@
 set $mod Mod4
-set $term foot
+set $term footclient
 set $menu fuzzel
 
 # Input & Output configuration
@@ -27,6 +27,7 @@ exec xdg-user-dirs-gtk-update
 exec udiskie --no-config --smart-tray --file-manager=pcmanfm
 exec autotiling
 exec /usr/share/sway-contrib/inactive-windows-transparency.py
+exec foot --server
 exec fnott
 exec ~/.local/bin/check_backup.sh
 # exec ~/.config/sway/scripts/fuzzel-keys
@@ -133,7 +134,7 @@ bindsym $mod+o exec ~/.config/sway/scripts/fuzzel-outputs
 bindsym $mod+m exec ~/.config/sway/scripts/fuzzel-mount
 bindsym $mod+period exec ~/.config/sway/scripts/fuzzel-config
 bindsym $mod+F1 exec ~/.config/sway/scripts/fuzzel-keys
-bindsym $mod+Escape exec "foot --app-id btop btop"
+bindsym $mod+Escape exec "footclient --app-id btop btop"
 
 # Screenshots
 bindsym Print exec /usr/share/sway-contrib/grimshot --notify savecopy output
@@ -149,7 +150,7 @@ for_window [app_id="brave-browser"] inhibit_idle fullscreen
 # Start Yazi in scratchpad
 for_window [app_id="yazi"] move to scratchpad
 bindsym $mod+slash [app_id="yazi"] scratchpad show, resize set 1500 800, move position center
-exec "foot --app-id=yazi bash -ic 'yazi'"
+exec 'foot --app-id=yazi bash -ic "yazi"'
 
 # Status Bar:
 bar {
