--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -102,7 +102,8 @@
         "tooltip-format-wifi": "  {essid} ({signalStrength}%)",
         "tooltip-format-ethernet": "󰈀 {ipaddr}",
         "tooltip-format-disconnected": "Disconnected",
-        "on-click": "nm-connection-editor",
+        "on-click": "networkmanager_dmenu",
+        "on-click-right": "nm-connection-editor",
         "max-length": 50
     },
 
