--- a/sway/.config/networkmanager-dmenu/config.ini
+++ b/sway/.config/networkmanager-dmenu/config.ini
@@ -8,7 +8,7 @@ highlight_bold = True
 compact = False
 pinentry = None
 wifi_icons = 󰤯󰤟󰤢󰤥󰤨
-format = {name:<{max_len_name}s}  {sec:<{max_len_sec}s} {icon:>4}
+format = {name:<{max_len_name}s}  ({sec:<{max_len_sec}s}) {icon:>4}
 list_saved = False
 prompt = Networks
 
