--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -2,7 +2,7 @@ set $mod Mod4
 set $term footclient
 set $menu fuzzel
 
-xwayland disable
+# xwayland disable
 
 # Input & Output configuration
 output * {
@@ -146,9 +146,7 @@ bindsym Shift+Print exec /usr/share/sway-contrib/grimshot --notify savecopy area
 # Window rules
 for_window [app_id="btop"] floating enable, resize set 1200 800, move position center
 for_window [app_id=".*alculator"] floating enable
-for_window [app_id="nm-connection-editor"] floating enable
-for_window [app_id="blueman-manager"] floating enable
-for_window [app_id="xarchiver"] floating enable
+for_window [app_id="^(nm-connection-editor|blueman-manager|xarchiver|pinentry-gtk)$"] floating enable
 for_window [app_id="brave-browser"] inhibit_idle fullscreen
 
 # Start Yazi in scratchpad
