--- a/sway/.config/networkmanager-dmenu/config.ini
+++ b/sway/.config/networkmanager-dmenu/config.ini
@@ -17,7 +17,7 @@ obscure = False
 obscure_color = #222222
 
 [pinentry]
-description = Get network password
+description = Enter network password
 prompt = Password:
 
 [editor]
