--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,12 +1,10 @@
 font=JetBrainsMono Nerd Font:size=14
 pad=10x10
 
-[cursor]
-color=11111b f5e0dc
-
 [colors]
 foreground=cdd6f4
 background=1e1e2e
+cursor=11111b f5e0dc
 alpha=0.95
 
 regular0=45475a
