--- a/sway/.config/swayimg/config
+++ b/sway/.config/swayimg/config
@@ -72,6 +72,8 @@ Shift+w = zoom height
 z = zoom fit
 Shift+z = zoom fill
 0 = zoom real
+1 = zoom 100
+2 = zoom 200
 period = zoom real
 BackSpace = zoom optimal
 slash = zoom optimal
