--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -8,8 +8,9 @@ prepend_keymap = [
 	{ on = [ "c", "a" ],       run = "plugin compress", desc = "Archive selected files" },
 
 	# Goto
-	{ on = [ "g", "m" ],       run = "cd /media/NAS/Media", desc = "Go to the NAS mount" },
-	{ on = [ "g", "u" ],       run = "cd /run/media/$USER", desc = "Go to USB mounts" },
-	{ on = [ "g", "." ],       run = "cd ~/.dotfiles/", desc = "Go to dotfiles" },
+	{ on = [ "g", "m" ],       run = "cd /media/NAS/Media",     desc = "Go to the NAS mount" },
+	{ on = [ "g", "u" ],       run = "cd /run/media/$USER",     desc = "Go to USB mounts" },
+	{ on = [ "g", "n" ],       run = "cd /run/user/1000/gvfs",  desc = "Go to network mounts" },
+	{ on = [ "g", "." ],       run = "cd ~/.dotfiles/",         desc = "Go to dotfiles" },
 ]
 
