--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -26,10 +26,10 @@ input "type:touchpad" {
 # Startup
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec xdg-user-dirs-gtk-update
-exec autotiling
+exec autotiling-rs
 exec /usr/share/sway-contrib/inactive-windows-transparency.py
 exec foot --server
-exec pcmanfm --daemon-mode
+# exec pcmanfm --daemon-mode
 exec fnott
 exec ~/.local/bin/check_backup.sh
 # exec ~/.config/sway/scripts/fuzzel-keys
