--- a/borg/.config/borgmatic/NAS.yaml
+++ b/borg/.config/borgmatic/NAS.yaml
@@ -14,6 +14,11 @@ compression: zstd,10
 archive_name_format: '{now}'
 keep_within: 3m
 
+log_file: NASBackup.log
+log_file_format: '[{asctime}] {message}'
+list_details: true
+statistics: true
+
 commands:
     - before: repository
       run:
