--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -132,6 +132,7 @@ client.urgent           $bg     $bg     $fg  $bg       $bg
 bindsym $mod+Ctrl+b workspace 2; exec brave
 bindsym $mod+Ctrl+e workspace 3; exec pcmanfm
 bindsym $mod+Ctrl+o workspace 9; exec nwg-displays; exec pavucontrol
+bindsym $mod+Ctrl+d exec ~/.config/sway/scripts/fuzzel-adoc
 bindsym $mod+o exec ~/.config/sway/scripts/fuzzel-outputs
 bindsym $mod+m exec ~/.config/sway/scripts/fuzzel-mount
 bindsym $mod+period exec ~/.config/sway/scripts/fuzzel-config
