Added fuzzel menu for webapps

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -133,6 +133,7 @@ bindsym $mod+Ctrl+b workspace 2; exec brave
 bindsym $mod+Ctrl+e workspace 3; exec pcmanfm
 bindsym $mod+Ctrl+o workspace 9; exec nwg-displays; exec pavucontrol
 bindsym $mod+Ctrl+d exec ~/.config/sway/scripts/fuzzel-adoc
+bindsym $mod+Ctrl+w exec ~/.config/sway/scripts/fuzzel-webapp
 bindsym $mod+o exec ~/.config/sway/scripts/fuzzel-outputs
 bindsym $mod+m exec ~/.config/sway/scripts/fuzzel-mount
 bindsym $mod+period exec ~/.config/sway/scripts/fuzzel-config
