Using waitwinch to address Sway bug. See craigbarnes/waitwinch on codeberg

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,5 +1,6 @@
 font=JetBrainsMono NFP:size=14
 pad=10x10
+shell = sh -c 'exec $(command -v waitwinch) ${SHELL:-sh}'
 
 [colors]
 foreground=cdd6f4
@@ -36,3 +37,4 @@ search-box-match=cdd6f4 313244
 
 jump-labels=11111b fab387
 urls=89b4fa
+
