--- a/sway/.config/waybar/config.jsonc
+++ b/sway/.config/waybar/config.jsonc
@@ -7,7 +7,7 @@
 
 // Modules
     "modules-left": [
-        "image#eos",
+        // "image#eos",
         "sway/workspaces",
         "sway/window"
     ],
