--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -44,7 +44,7 @@ image_bound = [ 6000, 6000 ]
 
 [plugin]
 prepend_fetchers = [
-    { id = "mime", url = "local://*", run = "mime-ext.local", prio = "high" },
+    # { id = "mime", url = "local://*", run = "mime-ext.local", prio = "high" },
     { id = "mime", url = "remote://*", run = "mime-ext.remote", prio = "high" },
 ]
 
